# SeetaFace4Android

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/yanyu/com/seetaface4android/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  seetaface_jni.cpp  seetaface_jni.h  util.h
app/src/main/cpp/include/: face_alignment.h
app/src/main/cpp/include/feat/: surf_feature_map.h
app/src/main/cpp/include/util/: image_pyramid.h  math_func.h
app/src/main/cpp/src/: cfan.cpp  face_detection.cpp  sift.cpp
app/src/main/cpp/src/Identification/: math_functions.cpp
app/src/main/cpp/src/feat/: surf_feature_map.cpp
app/src/main/cpp/src/test/: face_alignment_test.cpp
app/src/main/java/yanyu/com/seetaface4android/: MRAssetUtil.java  MRCameraBridgeView.java  MRSeetaFaceUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/yanyu/com/seetaface4android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle  local.properties
